cip api update
